style.css
html { 
  background: url(assets/cookin.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

@media screen and (max-width: 670px) {
  header {
    min-height: 500px;
  }
}

img {
  outline: #5d4037 solid 2px;
  padding: 3px;
}

.brand-logo {
  margin-left: 50px;  
}

#nav-mobile {
  margin-right: 100px;
}

#page-title {
  color: white;
  text-align: center;
  font-family: 'Dancing Script', cursive;
  font-size: 10vw;
  opacity: 85%;
}

#page-slogan {
  color: white;
  text-align: center;
  font-family: 'Dancing Script', cursive;
  font-size: 5vw;
  opacity: 85%;
}

#APIs {
  position: relative;
  margin: 80px;
  opacity: .95;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.modal {
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  border: dashed 3px black;
}

#entreeName {
  margin-top: 15px;
}
#entreeImage {
  width: 60%;
}
#entreeRecipe {
  padding: 15px;
}
#entreeLink {
  font-size: larger;
  margin-bottom: 15px;
}
#cocktailName {
  margin-top: 15px;
}
#cocktailImage {
  width: 60%;
}
#cocktailRecipe {
  padding: 15px;
}
#cocktailLink {
  font-size: larger;
  margin-bottom: 15px;
}

.btn {
  background-color: #5d4037;
}

.descriptions {
  font-size: 20px;
}

#dancing {
  height: 200px;
  position: relative;
  margin-right: 0;
}

